Создана страница Проектов, Статей, Резюме и вложенные в них разделы
1. Оптимизирован основной файл стилей.
2. Добавлены новые изображения на соответствующие разделы сайта.
3. Добавлены иконки под разные устройства (Манифест работает некорректно. Временно отключено в base.html).
4. Создана векторная версия логотипа.
5. Обновлён requirements.

--- a/PyTime_Project/core/templates/index.html
+++ b/PyTime_Project/core/templates/index.html
@@ -2,72 +2,61 @@
 {% load static %}
 
 {% block title %}
-PyTime - Начало Backend разработчика на Python
+	PyTime - Начало Backend разработчика на Python
 {% endblock title %}
 
 {% block main-container %}
-
-<!-- Greeting block -->
-<div class="main_greeting d-flex">
-	<div class="main_greeting_left_side d-flex flex-column justify-content-center">
-		<h1 class="main_greeting_title m-0 p-0">
-			Добро пожаловать в мир Python разработки!
-		</h1>
-		<p class="main_greeting_about p-0">
-			На этом сайте вы найдете портфолио проектов, статьи и полезные ресурсы, которые помогут вам лучше понять мои навыки. Я стремлюсь к постоянному развитию и готов поделиться своим опытом с вами.
-		</p>
-		<div class="main_greeting_buttons d-flex">
-			<div class="main_greeting_know_more d-flex justify-content-center">
-				<a href="#" class="main_greeting_know_more_link d-flex align-items-center">
-					Узнать больше
-				</a>
-			</div>
-			<div class="main_greeting_contact d-flex justify-content-center">
-				<a href="#" class="main_greeting_contact_link d-flex align-items-center">
-					Связаться
-				</a>
-			</div>
-		</div>
-	</div>
-</div>
-
-<div class="main_content">
-	<!-- Show my skills block -->
-	<div class="main_skills d-flex justify-content-between align-items-center">
-		<div class="main_skills_left_side ">
-			<h2 class="main_skills_left_side_title m-0">
-				Ключевые навыки и умения Python разработчика для успешной карьеры в IT
-			</h2>
-			<p class="main_skills_left_side_text">
-				Я обладаю глубокими знаниями в Python и опытом работы с различными фреймворками. Мои навыки включают разработку Web-приложений, работу с базами данных и тестирование кода.
+	<!-- Greeting block -->
+	<div class="main_greeting w-100 d-flex">
+		<div class="main_greeting_left_side d-flex flex-column justify-content-center">
+			<h1 class="main_greeting_title m-0 p-0">
+				Добро пожаловать в мир Python разработки!
+			</h1>
+			
+			<p class="main_greeting_about p-0">
+				На этом сайте вы найдете портфолио проектов, статьи и полезные ресурсы, которые помогут вам лучше понять мои навыки. Я стремлюсь к постоянному развитию и готов поделиться своим опытом с вами.
 			</p>
-			<ul class="main_skills_left_side_skills mb-0">
-				<li class="main_skills_left_side_skills_item">
-					Фреймворк: Django
-				</li>
-				<li class="main_skills_left_side_skills_item">
-					СУБД: MySQL, PostgreSQL, SQLite, SQL Server
-				</li>
-				<li class="main_skills_left_side_skills_item">
-					ORM: Django ORM, SQL Alchemy
-				</li>
-				<li class="main_skills_left_side_skills_item">
-					Библиотеки: asyncio, typing, Pandas, Numpy и другие
-				</li>
-			</ul>
-		</div>
-		
-		<div class="main_greeting_right_side">
-			<!-- Img block -->
+
+			<!-- Buttons -->
+			<div class="main_greeting_buttons d-flex justify-content-between">
+				<div class="main_greeting_know_more d-flex justify-content-center">
+					<a href="{% url 'projectsPage' %}" class="main_greeting_know_more_link w-100 d-flex justify-content-center align-items-center">
+						Узнать больше
+					</a>
+				</div>
+				
+				<div class="main_greeting_contact d-flex justify-content-center">
+					<a href="#footer_id" class="main_greeting_contact_link w-100 d-flex justify-content-center align-items-center">
+						Связаться
+					</a>
+				</div>
+			</div>
 		</div>
 	</div>
 
-	<!-- Separator line -->
-	<div class="border_content_separator"></div>
+	<div class="main_content">
+		<!-- Show my skills block -->
+		<div class="main_skills d-flex justify-content-between align-items-center">
+			<div class="main_skills_left_side ">
+				<h2 class="main_skills_left_side_title m-0">
+					Ключевые навыки и умения Python разработчика для успешной карьеры в IT
+				</h2>
 
-	<!-- Explore projects and blog block -->
-	{% include "expole_my_projects_and_blog.html" %}
-</div>
+				<p class="main_skills_left_side_text">
+					Я обладаю глубокими знаниями в Python и опытом работы с различными фреймворками. Мои навыки включают разработку Web-приложений, работу с базами данных и тестирование кода.
+				</p>
 
+				<!-- Skills -->
+				{% include 'include/hard_skills.html' %}
+			</div>
+			
+			<img class="main_skills_img" src="{% static 'img/main_page/skills.jpg' %}">
+		</div>
 
-{% endblock %}
+		<!-- Separator line -->
+		<hr class="content_separator">
+
+		<!-- Explore projects and blog block -->
+		{% include "include/explore_my_work/expole_my_projects_and_blog.html" %}
+	</div>
+{% endblock main-container %}
