--- a/PyTime_Project/templates/base.html
+++ b/PyTime_Project/templates/base.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <title>
             {% block title %}
-            {% endblock %}
+            {% endblock title %}
         </title>
 
         <!-- Bootstarp -->
@@ -14,68 +14,61 @@
         
         <!-- CSS -->
         <link rel="stylesheet" href="{% static 'css/css.css' %}">
+        
+        <!-- Icons -->
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'img/icon/apple-touch-icon.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/icon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/icon/favicon-16x16.png' %}">
+
+        <!--   Записана как ошибка    -->
+        <!--        <link rel="manifest" href="{% static 'img/icon/site.webmanifest' %}">-->
     </head>
 
     <body>
         <!-- Header -->
         <header class="header d-flex justify-content-between">
-            <!-- Left side -->
             <div class="header_left_side_block d-flex justify-content-between">
                 <!-- Logo -->
-                <div class="header_logo d-flex align-items-center justify-content-center">
-                    <a class="logo_link" href="#" >
-                        <img class="logo_img" src="{% static 'img/logo/logo.png' %}">
+                <div class="header_logo d-flex flex-row align-items-center justify-content-center">
+                    <a class="logo_link" href="{% url 'mainPage' %}" >
+                        <img class="logo_img" src="{% static 'img/logo/logo.svg' %}">
                     </a>
                 </div>
 
-                <!-- Menu -->
-                <ul class="header_menu_nav list-unstyled m-0 d-flex align-items-center">
-                  <li class="header_menu_nav_item">
-                    <a class="header_menu_link nav-link mx-2 p-0 d-flex justify-content-center" href="#">
-                        Проекты
-                    </a>
-                  </li>
-                  <li class="header_menu_nav_item">
-                    <a class="header_menu_link nav-link mx-2 p-0 d-flex align-items-center justify-content-center" href="#">
-                        Статьи
-                    </a>
-                  </li>
-                  <li class="header_menu_nav_item">
-                    <a class="header_menu_link nav-link mx-2 p-0 d-flex align-items-center justify-content-center" href="#">
-                        Резюме
-                    </a>
-                  </li>
-                </ul>
+                <!-- Header menu -->
+                {% include './include/header_menu.html' %}
             </div>
 
-            <!-- Right side -->
             <div class="header_right_side_block d-flex align-items-center">
                 <div class="header_authorization d-flex justify-content-center">
-                    <a href="#" class="header_authorization_link d-flex justify-content-center align-items-center">
+                    <a class="header_authorization_link d-flex justify-content-center align-items-center" href="#">
                         Войти
                     </a>
                 </div>
             </div>
         </header>
 
-        <!-- Container -->
+        <!-- Main container -->
         <div class="main_container">
             {% block main-container %}
             {% endblock %}
         </div>
 
+        <!-- Separator line -->
+        <hr class="base_content_separator">
+
         <!-- Footer -->
-        <footer class="footer d-flex justify-content-between">
+        <footer class="footer d-flex justify-content-between" id="footer_id">
             <!-- Logo -->
             <div class="footer_logo d-flex align-items-center justify-content-center">
-                <a class="logo_link " href="#" >
-                    <img class="logo_img" src="{% static 'img/logo/logo.png' %}">
+                <a class="logo_link " href="{% url 'mainPage' %}" >
+                    <img class="logo_img" src="{% static 'img/logo/logo.svg' %}">
                 </a>
             </div>
 
             <!-- Agreements -->
             <ul class="footer_agreements m-0 d-flex justify-content-between">
-                <li class="footer_agreements_item d-flex align-items-center justify-content-center" id="footer_agreements">
+                <li class="footer_agreements_item d-flex align-items-center justify-content-center">
                     <p class="footer_agreements_item_text p-0 m-0">
                         © 2025 Все права защищены
                     </p>
@@ -95,7 +88,7 @@
             <!-- Link's and Email -->
             <div class="footer_feedback d-flex flex-column justify-content-center">
                 <div class="footer_social_links d-flex align-items-center justify-content-between">
-                    <!-- Vk -->
+                    <!-- VK -->
                     <a href="https://vk.com/id318377923" target="_blank" class="footer_social_link_svg">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                             <path d="M12 2c5.514 0 10 4.486 10 10s-4.486 10-10 10-10-4.486-10-10 4.486-10 10-10zm0-2c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm.581 15.997c.304 0 .429-.204.425-.458-.016-.958.356-1.474 1.03-.802.744.744.896 1.26 1.801 1.26h1.601c.403 0 .562-.13.562-.334 0-.432-.711-1.194-1.312-1.752-.844-.783-.882-.802-.156-1.744.9-1.169 2.079-2.667 1.037-2.667h-1.991c-.387 0-.414.217-.551.542-.498 1.173-1.443 2.693-1.803 2.461-.377-.243-.204-1.203-.175-2.63.008-.377.006-.636-.571-.77-.314-.073-.621-.103-.903-.103-1.137 0-1.922.477-1.477.56.785.146.711 1.846.527 2.58-.319 1.278-1.518-1.012-2.018-2.152-.12-.275-.155-.488-.586-.488h-1.627c-.247 0-.394.08-.394.258 0 .301 1.479 3.36 2.892 4.885 1.379 1.487 2.742 1.354 3.689 1.354z"/>
