--- a/PyTime_Project/core/templates/errors/400.html
+++ b/PyTime_Project/core/templates/errors/400.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    PyTime - Page not found
+    PyTime - Bad Request
 {% endblock title %}
 
 {% block main-container %}
@@ -10,11 +10,11 @@
         <div class="error_404 d-flex align-items-center justify-content-between">
             <div class="error_404_left_side d-flex flex-column justify-content-center">
                 <h2 class="error_404_title mb-0">
-                    Ошибка 404
+                    Ошибка 400
                 </h2>
                 
                 <p class="error_404_text mb-0">
-                    Кажется что-то пошло не так! Страница, которую вы запрашиваете, не существует. Возможно она устарела, была удалена, или был введен неверный адрес в адресной строке.
+                    Ваш браузер отправил некорректный запрос. Возможно, у вас неправильный адрес или у вас устаревшая ссылка. Пожалуйста, очистите свой адрес и попробуйте отправить запрос еще раз.
                 </p>
             </div>
 
