--- a/PyTime_Project/core/templates/errors/403.html
+++ b/PyTime_Project/core/templates/errors/403.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    PyTime - Page not found
+    PyTime - Forbidden
 {% endblock title %}
 
 {% block main-container %}
@@ -10,11 +10,11 @@
         <div class="error_404 d-flex align-items-center justify-content-between">
             <div class="error_404_left_side d-flex flex-column justify-content-center">
                 <h2 class="error_404_title mb-0">
-                    Ошибка 404
+                    Ошибка 403
                 </h2>
                 
                 <p class="error_404_text mb-0">
-                    Кажется что-то пошло не так! Страница, которую вы запрашиваете, не существует. Возможно она устарела, была удалена, или был введен неверный адрес в адресной строке.
+                    Доступ запрещен. У вас нет прав для просмотра этой страницы. Войдите под другой учетной записью или попросите администратора дать вам доступ.
                 </p>
             </div>
 
