--- a/PyTime_Project/core/templates/include/write_comment.html
+++ b/PyTime_Project/core/templates/include/write_comment.html
@@ -9,7 +9,7 @@
 
 			<div class="feedback_publish_block d-flex justify-content-between align-items-center">
 				<p class="feedback_agreement mb-0">
-					Оставляя комментарий, вы соглашаетесь с условиями <u>пользовательского соглашения</u> и даете согласие на обработку <u>персональных данных</u>.
+					Оставляя комментарий, вы соглашаетесь с условиями <u class="agreement_underline"><a class="agreement_link" href="{% url 'userAgreement' %}">пользовательского соглашения</a></u> и даете согласие на обработку <u class="agreement_underline"><a class="agreement_link" href="{% url 'privacy' %}">персональных данных</a></u>.
 				</p>
 
 				<input type="submit" value="Опубликовать" class="feedback_publish_button">
