--- a/PyTime_Project/core/templates/resume.html
+++ b/PyTime_Project/core/templates/resume.html
@@ -72,7 +72,7 @@
                 </h2>
                 
                 <p class="developer_hard_skills_text">
-                    Я обладаю знаниями в Python и опытом работы с различными фреймворками. Мои навыки включают разработку Web-приложений, работу с БД и тестирование кода.
+                    Я обладаю знаниями в Python и опытом работы с различными фреймворками. Мои навыки включают разработку Web-приложений, работу с базами данных и тестирование кода.
                 </p>
 
                 <!-- Skills -->
