--- a/PyTime_Project/core/templates/errors/500.html
+++ b/PyTime_Project/core/templates/errors/500.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    PyTime - Page not found
+    PyTime - Internal server error
 {% endblock title %}
 
 {% block main-container %}
@@ -10,11 +10,11 @@
         <div class="error_404 d-flex align-items-center justify-content-between">
             <div class="error_404_left_side d-flex flex-column justify-content-center">
                 <h2 class="error_404_title mb-0">
-                    Ошибка 404
+                    Ошибка 500
                 </h2>
                 
                 <p class="error_404_text mb-0">
-                    Кажется что-то пошло не так! Страница, которую вы запрашиваете, не существует. Возможно она устарела, была удалена, или был введен неверный адрес в адресной строке.
+                    Сервис временно недоступен. Мы уже в курсе и исправляем ошибку. Обновите страницу через несколько минут. Если проблема не решится, напишите нам на почту.
                 </p>
             </div>
 
