--- a/PyTime_Project/core/templates/include/explore_my_work/expole_my_projects_and_blog.html
+++ b/PyTime_Project/core/templates/include/explore_my_work/expole_my_projects_and_blog.html
@@ -1,13 +1,13 @@
 <div class="explore_my_projects_and_blog d-flex justify-content-between align-items-center">
 	<div class="explore_my_projects_and_blog_left_side">
 		<h2 class="explore_my_projects_and_blog_left_side_title m-0">
-			Исследуйте мои проекты и блог
+			Исследуйте мои проекты и статьи
 		</h2>
 	</div>
 
 	<div class="explore_my_projects_and_blog_right_side">
 		<p class="explore_my_projects_and_blog_right_side_text">
-			Мои проекты отличаются высоким уровнем профессионализма и качества. Я тщательно подхожу к каждому аспекту работы, обеспечивая отличные результаты. Благодаря этому, они выделяются среди других, привнося новизну и эффективность в каждую задачу.
+			Здесь вы найдете тщательно проработанные проекты — от чистого кода до элегантных решений сложных задач. Мои статьи раскрывают свежие решения, разборы реальных кейсов и свежие тренды в разработке. Применяйте идеи, делитесь мнением в комментариях — давайте расти вместе в профессии!
 		</p>
 
 		<!-- Buttons -->
